# NetGuardX

./: readme.md
agent/: agentv2.py  pyproject.toml
agent/dataset/: GoodCollection.txt  SQLCollection.txt  SQLKeyword.txt
agent/module/: agentv1.py  packetforwarder.py  policyEnforcer.py  proxy.py  request.py
central/: .env  index.ts  package-lock.json  package.json
central/controllers/: adminAuthController.ts
central/model/: aclSchema.ts  index.ts
central/routes/: admin.ts  index.ts  logs.ts
central/utils/: jwt.ts
console/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo
console/src/: App.tsx
console/src/pages/: Landing.tsx  Layout.tsx  dashboard.tsx  login.tsx
docker/: readme.md
extlib/: bad.csv  badRequest  burplog  good.csv  httplog.csv  logparser.py
test/: readme.md
